advice generator responsive

--- a/advice-generator-app-main/index.html
+++ b/advice-generator-app-main/index.html
@@ -25,6 +25,9 @@
               up and taking action."
             </p>
           </blockquote>
+          <div class="advice__dice">
+            <img class="dice" src="images/icon-dice.svg" alt="icon-dice" />
+          </div>
         </div>
       </article>
       <footer class="footer">
