css active | get random advice from api

--- a/advice-generator-app-main/index.html
+++ b/advice-generator-app-main/index.html
@@ -17,17 +17,17 @@
       <article class="advice">
         <div class="advice__inner">
           <h1 class="advice__title">
-            Advice #<span id="advice__number">117</span>
+            Advice #<span id="number-quote">117</span>
           </h1>
           <blockquote class="advice__quote">
-            <p class="quote">
+            <p class="quote" id="quote">
               "It is easy to sit up and take notice, what's difficult is getting
               up and taking action."
             </p>
           </blockquote>
-          <div class="advice__dice">
+          <button type="button" class="advice__dice" id="button">
             <img class="dice" src="images/icon-dice.svg" alt="icon-dice" />
-          </div>
+          </button>
         </div>
       </article>
       <footer class="footer">
@@ -39,5 +39,7 @@
         </p>
       </footer>
     </main>
+
+    <script type="module" src="main.js"></script>
   </body>
 </html>
