--- a/advice-generator-app-main/index.html
+++ b/advice-generator-app-main/index.html
@@ -21,8 +21,8 @@
           </h1>
           <blockquote class="advice__quote">
             <p class="quote" id="quote">
-              "It is easy to sit up and take notice, what's difficult is getting
-              up and taking action."
+              “It is easy to sit up and take notice, what's difficult is getting
+              up and taking action.”
             </p>
           </blockquote>
           <button type="button" class="advice__dice" id="button">
@@ -33,13 +33,19 @@
       <footer class="footer">
         <p class="attribution">
           Challenge by
-          <a href="https://www.frontendmentor.io?ref=challenge" target="_blank"
+          <a
+            class="attribution__link"
+            href="https://www.frontendmentor.io?ref=challenge"
+            target="_blank"
             >Frontend Mentor</a
-          >. Coded by <a href="https://github.com/luismac09/">Luismac09</a>.
+          >. Coded by
+          <a class="attribution__link" href="https://github.com/luismac09/"
+            >Luismac09</a
+          >.
         </p>
       </footer>
     </main>
 
-    <script type="module" src="main.js"></script>
+    <script type="module" src="js/index.js"></script>
   </body>
 </html>
