--- a/time-tracking-dashboard-main/index.html
+++ b/time-tracking-dashboard-main/index.html
@@ -32,20 +32,20 @@
             <span class="title__text">Report for </span>Jeremy Robson
           </h1>
         </div>
-        <nav class="options">
-          <p class="options__item">
-            <a href="#daily" class="options__link">Daily</a>
+        <nav class="nav" id="nav">
+          <p class="nav__item">
+            <a href="#daily" class="nav__link">Daily</a>
           </p>
-          <p class="options__item">
-            <a href="#weekly" class="options__link">Weekly</a>
+          <p class="nav__item">
+            <a href="#weekly" class="nav__link">Weekly</a>
           </p>
-          <p class="options__item">
-            <a href="#monthly" class="options__link">Monthly</a>
+          <p class="nav__item">
+            <a href="#monthly" class="nav__link">Monthly</a>
           </p>
         </nav>
       </article>
       <div class="pages">
-        <section class="page pages__daily" id="daily">
+        <section class="page page-daily">
           <article class="card card--tracking card--work">
             <div class="card__inner">
               <div class="card__top">
@@ -143,7 +143,7 @@
             </div>
           </article>
         </section>
-        <section class="page pages__weekly" id="weekly">
+        <section class="page">
           <article class="card card--tracking card--work">
             <div class="card__inner">
               <div class="card__top">
@@ -241,7 +241,7 @@
             </div>
           </article>
         </section>
-        <section class="page pages__Monthly" id="monthly">
+        <section class="page">
           <article class="card card--tracking card--work">
             <div class="card__inner">
               <div class="card__top">
